# GuideMeBot_UGent_Project

./: .gitignore  LICENSE  README.md  Robotics presentation.pptx  download_whisper_model.sh  package.xml  requirements.txt  setup.cfg  setup.py
