<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guide_me_bot</name>
  <version>1.0.0</version>
  <description>Autonomous indoor navigation and guiding robot: GuideMeBot (Group 3)</description>
  <maintainer email="noah.delvoye@ugent.be">Noah Delvoye</maintainer>
  <maintainer email="aditya.kakarlamudi@ugent.be">Aditya Kakarlamudi</maintainer>
  <maintainer email="tybo.verslype@ugent.be">Tybo Verslype</maintainer>
  <maintainer email="joseph.thompson@ugent.be">Joseph Thompson</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot4_navigation</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
